--- a/.github/workflows/test-run.yml
+++ b/.github/workflows/test-run.yml
@@ -1,11 +1,13 @@
 name: Run OWLUnit Tests on Github-Hosted Runner
-description: "Run test cases for CQ verification using OWLUnit"
+
 on:
   # Trigger the workflow on push or pull request, but only for the test branch
   push:
-    branches:[musical-performance/test/CQ/]
-  pull-request: 
-    branches:[musical-performance/test/CQ/]
+    branches:
+      -musical-performance/test/CQ/
+  pull_request: 
+    branches:
+      -musical-performance/test/CQ/
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
  
