--- a/.github/workflows/test_run.yml
+++ b/.github/workflows/test_run.yml
@@ -1,5 +1,5 @@
 name: Run OWLUnit Tests on Github-Hosted Runner
-
+inputs: https://github.com/luigi-asprino/owl-unit/releases/tag/0.3.2/OWLUnit-0.3.2.jar
 on:
   # Trigger the workflow on push or pull request, but only for the test branch
   push:
@@ -13,8 +13,7 @@ on:
  
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel 
 jobs:
- 
- # This workflow contains a single job called "test-run"
+ # This workflow contains a job called "test-run"
   test-run:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -22,14 +21,10 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: ./test_build.yml
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+     
