--- a/.github/workflows/upload-OWLUnit.yml
+++ b/.github/workflows/upload-OWLUnit.yml
@@ -1,21 +1,12 @@
 name: 'Upload OWLUnit'
-description: 'Upload OWLUnit jar that can be used by subsequent workflow steps for unit test run'
-author: 'Fiorela Ciroku'
-inputs: 
-  name:
-    description: 'OWLUnit'
-    default: 'artifact'
-  path:
-    description: https://github.com/luigi-asprino/owl-unit/releases/download/0.3.2/OWLUnit-0.3.2.jar
-    required: true
-  if-no-files-found: 
-    description: >
-      The desired behavior if no files are found using the provided path.
-      Available Options:
-        warn: Output a warning but do not fail the action
-        error: Fail the action with an error message
-        ignore: Do not output any warnings or errors, the action does not fail
-    default: 'error'
-runs:
-  using: 'node12'
-  main: 'dist/index.js'
+on: 
+  workflow_dispatch:
+jobs:    
+  steps:
+    uses: actions/upload-artifact@v2.2.4
+    with:
+      # Artifact name
+      name: OWLUnit
+      # A file, directory or wildcard pattern that describes what to upload
+      path: https://github.com/luigi-asprino/owl-unit/releases/download/0.3.2/OWLUnit-0.3.2.jar
+      required: true
