--- a/.github/workflows/upload-OWLUnit.yml
+++ b/.github/workflows/upload-OWLUnit.yml
@@ -1,5 +1,12 @@
 name: 'Upload OWLUnit'
 on: 
+  push:
+    branches:
+      -musical-performance/test/CQ/
+  pull_request: 
+    branches:
+      -musical-performance/test/CQ/
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 jobs:    
   name: Upload a Build Artifact
