--- a/.github/workflows/upload-OWLUnit.yml
+++ b/.github/workflows/upload-OWLUnit.yml
@@ -10,8 +10,8 @@ jobs:
   upload-OWLUnit: 
     runs-on: ubuntu-latest
     steps: 
-    - uses: actions/upload-artifact@v2.2.4
     - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v2.2.4
       with:
         name: OWLUnit
         path: https://github.com/luigi-asprino/owl-unit/releases/download/0.3.2/OWLUnit-0.3.2.jar
