--- a/.github/workflows/test_run.yml
+++ b/.github/workflows/test_run.yml
@@ -1,5 +1,5 @@
-name: Run OWLUnit Tests on Github-Hosted Runner
-inputs: https://github.com/luigi-asprino/owl-unit/releases/tag/0.3.2/OWLUnit-0.3.2.jar
+name: Run OWLUnit Tests on Self-Hosted Runner
+
 on:
   # Trigger the workflow on push or pull request, but only for the test branch
   push:
@@ -11,20 +11,20 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
  
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel 
+
 jobs:
- # This workflow contains a job called "test-run"
   test-run:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    runs-on: self-hosted
+    needs: test-build
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: ./test_build.yml
+      - name: Checkout V2
+        uses: actions/checkout@v2
+      - name: Set up java
+        uses: actions/setup-java@v2
+        with:
+           distribution: 'temurin' # See 'Supported distributions' for available options
+           java-version: '11'
+      - run: java -jar OWLUnit-0.3.2.jar -c <URI>       
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
 
-     
+      
