--- a/.github/workflows/test_run.yml
+++ b/.github/workflows/test_run.yml
@@ -4,10 +4,10 @@ on:
   # Trigger the workflow on push or pull request, but only for the test branch
   push:
     branches:
-      -musical-performance/test/CQ/
+      - musical-performance/test/CQ/
   pull_request: 
     branches:
-      -musical-performance/test/CQ/
+      - musical-performance/test/CQ/
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
  
