--- a/.github/workflows/create-directory.yml
+++ b/.github/workflows/create-directory.yml
@@ -11,6 +11,15 @@ on:
     branches: [ FiorelaCiroku-patch-2 ]
     
   workflow_dispatch:
+    inputs:
+      name:
+        description: 'Person to greet'
+        required: true
+        default: 'Mona the Octocat'
+      home:
+        description: 'location'
+        required: false
+        default: 'The Octoverse'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
