--- a/.github/workflows/create-directory.yml
+++ b/.github/workflows/create-directory.yml
@@ -4,8 +4,8 @@ name: CI
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the $default-branch branch
-on:    
-  workflow_dispatch:
+
+on: workflow_dispatch
 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
