--- a/.github/workflows/create-directory.yml
+++ b/.github/workflows/create-directory.yml
@@ -23,5 +23,6 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: mkdir CC1/README.txt
+        run: ls -la ~/
+             mkdir ~/CC1/README.txt
                    
