--- a/.github/workflows/create-directory.yml
+++ b/.github/workflows/create-directory.yml
@@ -23,6 +23,5 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: ls -la ~/
-             mkdir ~/CC1/README.txt
+        run: mkdir ~/CC1/README.txt
                    
