--- a/.github/workflows/create-directory.yml
+++ b/.github/workflows/create-directory.yml
@@ -24,6 +24,6 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: | 
-              mkdir testmanagement/CC1
+              mkdir CC1
               echo " " > CC1/README.txt
                    
