--- a/.github/workflows/create-directory.yml
+++ b/.github/workflows/create-directory.yml
@@ -1,6 +1,6 @@
-# This is a basic workflow to help you get started with Actions
+# This is a workflow that is able to create directories in Github servers
 
-name: CI
+name: Create directory
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the $default-branch branch
@@ -22,9 +22,9 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: Create directory
         run: | 
               mkdir CC1
-              echo " " > CC1/README.txt
-              return README.txt
+              echo " This is a new test file! " > CC1/README.txt
+              
                    
