--- a/.github/workflows/create-directory.yml
+++ b/.github/workflows/create-directory.yml
@@ -26,5 +26,5 @@ jobs:
         run: | 
               mkdir CC1
               echo " This is a new test file! " > CC1/README.txt
-              cat "README.text"
+              cat "README.txt"
                    
