--- a/.github/workflows/create-directory.yml
+++ b/.github/workflows/create-directory.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs multiple commands using the runners shell
-      - name: Create directory structure
+      - name: Create directory structure for the CC testing
         run: | 
               mkdir CC
               cd CC
@@ -25,7 +25,7 @@ jobs:
               mkdir IV
               mkdir EP
               echo " This is a list of competency questions " > CQ.txt
-              echo " This is a list of general contraints! " > GC.sparql
+              echo " This is a list of general contraints! " > GC.txt
               cd SPARQLUnitTest
               mkdir CQTestCase
               mkdir CQDataSet
