--- a/.github/workflows/read-file.yml
+++ b/.github/workflows/read-file.yml
@@ -19,6 +19,8 @@ jobs:
       # Runs multiple commands using the runners shell
       - name: Create directory structure for the CC testing
         run: |
-            while IFS= read -r line; do
-            echo "Text read from file: $line"
-            done < CQ.txt
+            filename= CQ.txt
+            while read -r line; do
+            name="$line"
+            echo "Name read from file - $name"
+            done < "$filename"
