--- a/.github/workflows/read-file.yml
+++ b/.github/workflows/read-file.yml
@@ -19,9 +19,7 @@ jobs:
       # Runs multiple commands using the runners shell
       - name: Create directory structure for the CC testing
         run: |
-            #!/usr/bin/bash
-            filename = "CQ.txt"
             while read -r line; do
             name="$line"
             echo "Name read from file - $name"
-            done < "$filename"
+            done < CQ.txt
