--- a/.github/workflows/read-file.yml
+++ b/.github/workflows/read-file.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   # This workflow contains a job called "read file"
-  create-directory-structure:
+  read-file:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
