--- a/.github/workflows/setup-OWLUnit.yml
+++ b/.github/workflows/setup-OWLUnit.yml
@@ -1,4 +1,4 @@
-name: 'Download OWLUnit'
+name: 'Setup OWLUnit'
 on: 
   workflow_dispatch:
   
@@ -6,8 +6,17 @@ jobs:
   download-OWLUnit: 
     runs-on: ubuntu-latest
     steps: 
+    - uses: actions/checkout@v2
+    - name: Setup Java
+    - uses: actions/setup-java@v2
+      with:
+        distribution: 'temurin' 
+        java-version: '17'
+        run: java -cp java HelloWorldApp
+      
     - name: Clone OWLUnit github repository
       run: git clone https://github.com/luigi-asprino/owl-unit.git
+      
       
       
     
