--- a/.github/workflows/setup-OWLUnit.yml
+++ b/.github/workflows/setup-OWLUnit.yml
@@ -12,7 +12,7 @@ jobs:
       with:
         distribution: 'temurin' 
         java-version: '17'
-        run: java -cp java HelloWorldApp
+    - run: java -cp java HelloWorldApp
       
     - name: Clone OWLUnit github repository
       run: git clone https://github.com/luigi-asprino/owl-unit.git
