--- a/.github/workflows/setup-java.yml
+++ b/.github/workflows/setup-java.yml
@@ -11,6 +11,7 @@ jobs:
       with:
         distribution: 'temurin' 
         java-version: '17'
+    - run: git clone https://github.com/luigi-asprino/owl-unit.git
 
 
       
