--- a/.github/workflows/test_run.yml
+++ b/.github/workflows/test_run.yml
@@ -1,33 +1,24 @@
-name: Run OWLUnit Tests on Self-Hosted Runner
-
-on:
-  push:
-    branches: [ musical-performance/test/CQ/ ]
-  pull_request: 
-    branches: [ musical-performance/test/CQ/ ]
-    
-  # Allows you to run this workflow manually from the Actions tab
-  
-  workflow_dispatch:
+name: Run OWLUnit Tests
+on: [push]
  
-
 jobs:
   test-run:
-    runs-on: self-hosted
-    needs: test-build
+    runs-on: ubuntu-latest
+    needs: setup-environment
     steps:
       - name: Checkout V2
         uses: actions/checkout@v2
-      - name: Set up java
-        uses: actions/setup-java@v2
-        with:
-           distribution: 'temurin' # See 'Supported distributions' for available options
-           java-version: '11'
+      
       - run: java -jar OWLUnit-0.3.2.jar -c <URI>       
 
-  test-build:
-    runs-on: self-hosted
+  setup-environment:
+    runs-on: ubuntu-latest
     steps:
-      - name: Nothing
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2.4.0
+        with:
+          distribution: 'temurin' 
+          java-version: '17'
+      - run: git clone https://github.com/luigi-asprino/owl-unit.git
+
       
