--- a/.github/workflows/read-file.yml
+++ b/.github/workflows/read-file.yml
@@ -17,9 +17,9 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs multiple commands using the runners shell
-      - name: Create directory structure for the CC testing
+      - name: readLine
         run: |
             while read -r line; do
-            name="$line"
-            echo "Name read from file - $name"
+            line="$line"
+            echo "Line read from file - $line" >> $GITHUB_ENV
             done < CQ.txt
