--- a/.github/workflows/read-file.yml
+++ b/.github/workflows/read-file.yml
@@ -21,5 +21,5 @@ jobs:
         run: |
             while read -r line; do
             line="$line"
-            echo "Line read from file - $line" >> $GITHUB_ENV
+            echo "Line read from file - $line" 
             done < CQ.txt
