--- a/.github/workflows/create-file.yml
+++ b/.github/workflows/create-file.yml
@@ -1,10 +1,10 @@
-name: Create A File
+name: Create file
 # This workflow is triggered on pushes to the repository.
 on: push
 
 jobs:
   createFile:
-    name: Create A File
+    name: Create file
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
