--- a/.github/workflows/create-directory.yml
+++ b/.github/workflows/create-directory.yml
@@ -55,6 +55,9 @@ jobs:
         
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v0.9.11
+        with:
+          versionSpec: '0.x'
+          includePrerelease: true
 
               
             
