--- a/.github/workflows/create-directory.yml
+++ b/.github/workflows/create-directory.yml
@@ -14,7 +14,7 @@ on:
       - main
     paths: 
       - 'ontology-network/musical-performance-ontology/**'
-  workflow_dispatch:
+  # workflow_dispatch:
   
 jobs:
   
