--- a/.github/workflows/create-directory.yml
+++ b/.github/workflows/create-directory.yml
@@ -4,7 +4,7 @@
 # Output: 1. A directory structure for the testing of the conceptual component that was added. 2. A display of the directory that is added. 3. A pull request to add the directories to the main branch. 
 
 
-# The name of the directory
+# The name of the workflow
 name: Create directory
 
 # The event that triggers the action is a commit to the ontology module directory. 
