--- a/.github/workflows/prova1.yml
+++ b/.github/workflows/prova1.yml
@@ -32,9 +32,7 @@ jobs:
             cd ontology-network
             cd musical-performance-ontology
             cd TimeInterval
-            # This script checks if the input that is necessary to run the test are non empty files. 
-            # for file in *.txt; do if [ ! -s $file ]; then echo "$file is empty" ; else echo "$file is not empty"; fi; done
-            [ -s CompetencyQuestions.txt] || echo "file is empty"
+            [ -s CompetencyQuestions.txt] ] && echo "file has something" || echo "file is empty"
             
       
       
