--- a/.github/workflows/input-crosscheck.yml
+++ b/.github/workflows/input-crosscheck.yml
@@ -42,7 +42,18 @@ jobs:
             echo "Line read from file - $line" 
             cd $line
             # This script checks if the input that is necessary to run the test are non empty files. 
-            for file in *.txt; do if [ ! -s $file ]; then echo "$file is empty" ; else echo "$file is not empty"; fi; done
+            for file in *.txt; 
+            do if [ -s $file ]; then
+            rm -f empty.txt
+            touch full.txt
+            echo "File not empty"
+            else
+            # The file is empty.
+            rm -f full.txt
+            touch empty.txt
+            exho "File empty"
+            fi
+            
             done < UserInput.txt
       
       
